--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -47,12 +47,15 @@ ul {
 li {
     font-size: 18pt;
     float: left;
-    padding: 5px 10px;
+    padding: 5px;
+    transition: margin 0.3s ease-in-out, background-color 0.2s ease-in-out;
+    width: 100%;
 }   
 
 li:hover {
     background-color: rgb(64, 64, 64);
     border-radius: 2px;
+    margin: -3px 0;
 }
 
 a {
