--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -17,15 +17,17 @@
 #navBackground {
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
-#titleContent {
+#titleContent-0, #titleContent-1, #titleContent-2, #titleContent-3, #titleContent-4, #titleContent-5 {
     font-size: 40pt;
-    font-weight: bold;
     color: black;
     position: static;
-    margin: 0px auto 10px auto;
+    margin: 0 0 10px 0;
     padding: 0 0 5px 0;
+    transition: color 0.15s ease-in-out;
+    align-self: center;
 }
 
 ul {
@@ -45,14 +47,16 @@ ul {
 }
 
 li {
+    color: #d0d0d0;
     font-size: 18pt;
     float: left;
     padding: 5px;
-    transition: margin 0.3s ease-in-out, background-color 0.2s ease-in-out;
+    transition: margin 0.3s ease-in-out, background-color 0.2s ease-in-out, font-weight 0.2s ease-in-out;
     width: 100%;
 }   
 
 li:hover {
+    color: #ffffff;
     background-color: rgb(64, 64, 64);
     border-radius: 2px;
     margin: -3px 0;
