--- a/src/components/ContentArea/ContentArea.css
+++ b/src/components/ContentArea/ContentArea.css
@@ -2,7 +2,7 @@
     display: flex;
     position: absolute;
     flex-direction: column;
-    top: 6em;
+    top: 6.3em;
     width: 90%;
     padding: 0 20px;
     background-color: #7c97a3;
@@ -53,4 +53,22 @@ img {
     font-size: 15pt;
     text-align: center;
     margin: 0 0 20px 0;
+}
+
+@media screen and (max-width: 400px) {
+    #contentContainer {
+        margin: 0;
+    }
+    
+    .contentHeader {
+        font-size: 20pt;
+    }
+
+    .contentBody {
+        font-size: 15pt;
+    }
+
+    .galleryDescription {
+        font-size: 10pt;
+    }
 }
