--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -5,7 +5,6 @@
 }
 
 #navContainer {
-    padding: 0;
     left: 0;
     right: 0;
     top: 0;
@@ -18,6 +17,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-bottom: -15px;
 }
 
 #socialMediaLinksContainer {
@@ -58,7 +58,7 @@ ul {
     padding: 0;
     position: fixed;
     top: 65px;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.753);
 }
 
 li {
@@ -68,11 +68,12 @@ li {
     padding: 5px;
     transition: margin 0.3s ease-in-out, background-color 0.2s ease-in-out, font-weight 0.2s ease-in-out;
     width: 100%;
+
 }   
 
 li:hover {
     color: #ffffff;
-    background-color: rgb(64, 64, 64);
+    background-color: rgba(64, 64, 64, 0.887);
     border-radius: 2px;
     margin: -3px 0;
 }
