--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -5,6 +5,7 @@
     position: fixed;
     text-align: center;
     background-color: #93b5c6;
+    z-index: 1;
 }
 
 #navBackground {
@@ -12,6 +13,7 @@
     flex-direction: row;
     justify-content: center;
     margin-bottom: -20px;
+    z-index: -1;
 }
 
 #socialMediaLinksContainer {
@@ -39,6 +41,7 @@
     padding: 0 0 5px 0;
     transition: color 0.15s ease-in-out;
     align-self: center;
+    z-index: 1;
 }
 
 #titleDefinition {
@@ -53,11 +56,15 @@
     color: black;
 }
 
-#showNavBar {
+#showNavBar{
     display: flex;
-    font-size: 20pt;
-    margin-left: 13px;
-    padding: 0 0 10px 0;
+    width: 50px;
+    margin: 0 0 0 5px;
+}
+
+#showNavBar i {
+    font-size: 25pt;
+    margin: -30px 0 0 10px;
 }
 
 ul {
@@ -66,10 +73,11 @@ ul {
     justify-content: left;
     list-style-type: none;
     width: 100px;
-    margin: 15px 0 0 11px;
+    margin: 15px 0 0 0;
+    left: 15px;
     padding: 0 20px 0 20px;
     position: fixed;
-    top: 140px;
+    top: 107px;
     background-color: rgba(0, 0, 0, 0.753);
 }
 
