--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -62,7 +62,7 @@
     margin: -30px 0 0 10px;
 }
 
-ul {
+#navBar {
     display: none;
     flex-direction: column;
     justify-content: left;
@@ -72,8 +72,8 @@ ul {
     left: 15px;
     padding: 0 20px 0 20px;
     position: fixed;
-    top: 107px;
     background-color: rgba(0, 0, 0, 0.753);
+    transition: top 0.3s ease-in-out;
 }
 
 li {
