--- a/src/components/ContentArea/ContentArea.css
+++ b/src/components/ContentArea/ContentArea.css
@@ -5,7 +5,7 @@
     top: 8.5em;
     width: 90%;
     padding: 0 20px;
-    background-color: #7c97a3;
+    background-color: rgba(124,151,163,.75);
     border-radius: 0 0 1em 1em;
     box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.5);
     z-index: -3;
