--- a/src/index.css
+++ b/src/index.css
@@ -42,20 +42,24 @@ body {
   display: flex;
   justify-content: center;
 }
-  
-#footer-copyright {
-  background-color: #9d608e;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: 0;
-  padding-top: 3px;
-  padding-bottom: 3px;
+
+#drop {
+  background: url('https://static.vecteezy.com/system/resources/thumbnails/041/289/636/small/ai-generated-white-goat-isolated-on-transparent-background-png.png');
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  bottom: 200px;
+  z-index: 3;
 }
 
-#footer-copyright-text {
-  color: black;
-  font-size: 11pt;
-  padding-left: 5px;
+.rain{
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  unicode-bidi: isolate;
+  z-index: -99;
+  overflow: hidden;
+  min-height: 100vh;
+  height: 125vh;
 }
